--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://ojw.github.io/react-for-beginners2/"
+  "homepage": "https://crnfan21.github.io/react-for-beginners2"
 }
